Update openapi.yaml and adapt changes
